changed prof pic

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl: /
 title: Gyanendra Mishra
 author: Gyanendra Mishra
 description: Gyanendra Mishra
-avatar: profile.png
+avatar: profile.jpg
 email: anomaly.the@gmail.Comment
 github: h4ck3rk3y # username
 twitter: _gyani_
