--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://username.github.io"
+url: "http://h4ck3rk3y.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,36 +14,36 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Gyanendra Mishra
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Undergraduate computer science students. Loves all things data and security.
 
 # --- Navigation bar options --- #
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/avatar-icon.jpg"
 
 # List of links in the navigation bar
 navbar-links:
   Home: ""
-  About Me: "aboutme"
-  Author's home: "http://deanattali.com"
-  
+  About Me: "About"
+  Author's home: "http://gyani.net"
+
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: yourlink  # eg. "3943160/daattali"
- 
+  name: Gyanendra Mishra
+  email: "anomaly.the@gmail.com"
+  facebook: iownfb  # eg. daattali
+  github: h4ck3rk3y    # eg. daattali
+  twitter: _gyani_   # eg. daattali
+  linkedin: mishragyanendra  # eg. "pub/dean-attali/8/946/143"
+  stackoverflow: 3978786/gyanendra-mishra  # eg. "3943160/daattali"
+
 # Select which links to show in the footer
 footer-links-active:
   rss: false
@@ -51,12 +51,12 @@ footer-links-active:
   email: true
   twitter: true
   github: true
-  linkedin: false
-  stackoverflow: false
+  linkedin: true
+  stackoverflow: true
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "gyani.net"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
@@ -69,7 +69,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Asia/Kolkata"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
