--- a/_config.yml
+++ b/_config.yml
@@ -3,33 +3,33 @@
 # url is the full website URL
 # baseurl is the website's URL without the hostname
 
-# If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://h4ck3rk3y.github.io"
+url: "http://gyani.net"
 baseurl: ""
 
-# If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
-
-# Of course don't forget to change the username and projectname to YOUR username and project
-
-# Name of website
+# Brief name and description of the site
 title: Gyanendra Mishra
+description: "Undergraduate Computer Science student. Loves all things data and security. I will code for airtickets."
 
-# Short description of your site
-description: Undergraduate computer science students. Loves all things data and security.
+# --- Outputting options --- #
+# More information can be found on Jekyll's site
+timezone: "Asia/Kolkata"
+markdown: kramdown
+highlighter: rouge
+permalink: /blog/:title/
+paginate: 5
+paginate_path: "/page:num/"
 
 # --- Navigation bar options --- #
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.jpg"
+avatar: "/img/gyani.jpg"
 
 # List of links in the navigation bar
 navbar-links:
   Home: ""
-  About Me: "About"
-  Author's home: "http://gyani.net"
+  Projects: "projects"
+  About Me / Contact: "about"
 
 # --- Footer options --- #
 
@@ -38,11 +38,11 @@ navbar-links:
 author:
   name: Gyanendra Mishra
   email: "anomaly.the@gmail.com"
-  facebook: iownfb  # eg. daattali
-  github: h4ck3rk3y    # eg. daattali
-  twitter: _gyani_   # eg. daattali
-  linkedin: mishragyanendra  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: 3978786/gyanendra-mishra  # eg. "3943160/daattali"
+  facebook: iownfb
+  github: h4ck3rk3y
+  twitter: _gyani_
+  linkedin: mishra/gyanendra
+  stackoverflow: 3978786/gyanendra-mishra
 
 # Select which links to show in the footer
 footer-links-active:
@@ -56,24 +56,17 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "gyani.net"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "gyani.net"
 
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-#disqus: ""
+disqus:""
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-60799114-1"  # Your Google Analytics ID
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
-
-# Output options (more information on Jekyll's site)
-timezone: "Asia/Kolkata"
-markdown: kramdown
-highlighter: rouge
-permalink: /:year-:month-:day-:title/
-paginate: 5
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
@@ -83,66 +76,17 @@ defaults:
       type: "posts"
     values:
       comments: true  # add comments to all blog posts
+      show-share: true # add sharing buttons to all blog posts
   -
     scope:
       path: "" # all files
     values:
       layout: "default"
-      show-avatar: true
 
 # Exclude these files from production site
 exclude:
-  - Gemfile
-  - Gemfile.lock
+  - CNAME
   - LICENSE
   - README.md
-  - CNAME
-  - Vagrantfile
 
-# prose.io config
-prose:
-  rooturl: '_posts'
-  media: 'img'
-  ignore:
-    - 404.html
-    - LICENSE
-    - feed.xml
-    - _config.yml
-    - /_layouts
-    - /_includes
-    - /css
-    - /img
-    - /js
-  metadata:
-    _posts:
-      - name: "layout"
-        field:
-          element: "hidden"
-          value: "post"
-      - name: "title"
-        field:
-          element: "text"
-          label: "Post title"
-          placeholder: "Title"
-          alterable: true
-      - name: "subtitle"
-        field:
-          element: "textarea"
-          label: "Subtitle"
-          placeholder: "A description of your post."
-          alterable: true
-      - name: "date"
-        field:
-          element: "text"
-          label: "Date"
-          help: "Enter date of post."
-          placeholder: "yyyy-mm-dd"
-          alterable: true
-      - name: "published"
-        field:
-          element: "checkbox"
-          label: "Publish"
-          help: "Check to publish post, uncheck to hide."
-  
-# Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
