--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ url-pretty: "gyani.net"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus:""
+# disqus:
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-60799114-1"  # Your Google Analytics ID
