--- a/_config.yml
+++ b/_config.yml
@@ -23,14 +23,14 @@ paginate_path: "/page:num/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.jpg"
+avatar: "/img/gyani.jpg"
 
 # List of links in the navigation bar
 navbar-links:
   Home: ""
   Projects: "projects"
   About Me: "about"
-  Accolade: "achievements"
+  Achievements: "achievements"
 
 # --- Footer options --- #
 
