--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,7 @@ url-pretty: "blog.gyani.net"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-60799114-1"  # Your Google Analytics ID
+fb_app_id: 141744580521782
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
