--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # url is the full website URL
 # baseurl is the website's URL without the hostname
 
-url: "https://gyani.net"
+url: "http://gyani.net"
 baseurl: ""
 
 # Brief name and description of the site
