fixed a markdown error

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ avatar: "/img/gyani.jpg"
 navbar-links:
   Home: ""
   Projects: "projects"
-  About Me: "about"
+  About: "about"
   Achievements: "achievements"
   Ideas: "ideas"
 
