--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ url-pretty: "gyani.net"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-60799114-1"  # Your Google Analytics ID
-# fb_app_id: 201438500215535
+fb_app_id: 201438500215535
 
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
