--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ url-pretty: "gyani.net"
 # --- Misc --- #
 
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-# disqus:
+disqus: "gyani"
 
 # Fill in your Google Analytics ID to track your website using GA
 google_analytics: "UA-60799114-1"  # Your Google Analytics ID
