--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ navbar-links:
   Projects: "projects"
   About: "about"
   Achievements: "achievements"
+  Resume: "/files/resume.pdf"
 
 # --- Footer options --- #
 
