--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
   Projects: "projects"
   About: "about"
   Achievements: "achievements"
-  Resume: "/files/resume.pdf"
+  Resume: "//files/resume.pdf"
 
 # --- Footer options --- #
 
